공지사항 팝업 추가 작업

--- a/src/app/pages/pc/home/about/galaxy-about.component.html
+++ b/src/app/pages/pc/home/about/galaxy-about.component.html
@@ -1,37 +1,290 @@
 <section id="text-carousel-intro-section" class="parallax" data-stellar-background-ratio="0.5">
-    <div style="position: absolute;" #galaxy3dContainer></div>
+    <!-- <div style="position: absolute;" #galaxy3dContainer></div> -->
     <div style="position: relative; left: 0; right: 0;" class="container">
+        <div class="pc">
+            <div class="popup" #popup>
+                <a (click)="closePopup();" style="cursor: pointer;" type="button" class="ly_vote_close"><span class="blind">팝업닫기</span></a>
+                <div class="extra-space-m"></div>
+                <div class="popup_box">
+                    <h3>소규모 합병 공고</h3>
+                    <div class="extra-space-m"></div>
+                    <div class="popup_box_inner">
+                        <div class="popup_text">
+                            주식회사 갤럭시코퍼레이션은 주식회사 주피터엔터테인먼트 및 주식회사 페르소나유니 버스와 2022년 6월 10일 각각 합병계약을 체결하고,상법 제527조의3규정에 의하여 그
+                            내용을 아래와 같이 공고합니다.
+                        </div>
+                        <div class="popup_text" style="text-align: center;">
+                            - 아 래 -
+                        </div>
+                        <div class="popup_text">
+                            1. 합병 당사회사 <br />
+                            &nbsp; &nbsp; &nbsp;가. 존속법인 : 주식회사 갤럭시코퍼레이션 <br />
+                            &nbsp; &nbsp; &nbsp;나. 소멸법인 : 주식회사 주피터엔터테인먼트 <br />
+                            &nbsp; &nbsp; &nbsp;다. 소멸법인 : 주식회사 페르소나유니버스 <br />
+                        </div>
+                        <div class="popup_text">
+                            2. 합병방법 : 주식회사 갤럭시코퍼레이션이 주식회사 주피터엔터테인먼트 및 페르&nbsp; &nbsp; &nbsp; &nbsp; &nbsp;소나유니버스를 각각 흡수합병함
+                        </div>
+                        <div class="popup_text">
+                            3. 합병비율: <br />
+                            &nbsp; &nbsp;「주식회사 갤럭시코퍼레이션 : 주식회사 주피터엔터테인먼트 = 1 : 0」 <br />
+                            &nbsp; &nbsp;「주식회사 갤럭시코퍼레이션 : 주식회사 페르소나유니버스 = 1 : 0」 <br />
+                        </div>
+                        <div class="popup_text">
+                            4. 각 소멸회사의 현황 <br />
+                            &nbsp; &nbsp; &nbsp;가. 주식회사 주피터엔터테인먼트 : 서울특별시 영등포구 국제금융로 2 길 37, &nbsp; &nbsp; &nbsp; &nbsp;
+                            &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;2102 호 <br />
+                            &nbsp; &nbsp; &nbsp;나. 주식회사 페르소나유니버스 : 서울특별시 영등포구 국회대로 780, 1134 호 <br />
+                        </div>
+                        <div class="popup_text">
+                            5. 합병기일: 2022년 8월 1일
+                        </div>
+                        <div class="popup_text">
+                            6. 주식회사 갤럭시코퍼레이션과 주식회사 주피터엔터테인먼트 및 주식회사 페르소&nbsp; &nbsp; &nbsp; &nbsp;나유니버스와의 본건 합병은 상법 제 527 조의
+                            3 규정에 의한 소규모합병으로 주&nbsp; &nbsp; &nbsp; &nbsp; &nbsp;주총회의 승인을
+                            얻지 아니하고 이사회 결의로 합병함
+                        </div>
+    
+                        <div class="popup_text">
+                            7. 소규모합병 반대의사표시 행사(기준일 및 주주명부 폐쇄기간) <br />
+                            &nbsp; &nbsp; &nbsp;가. 기준일 및 폐쇄기간 <br />
+                            &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;기준일 : 2022년 6월 13일<br />
+                            &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;주주명부 폐쇄기간 : 2022년 6월 13일부터 2022년 6월 27일까지<br />
+                            &nbsp; &nbsp; &nbsp;나. 행사절차: 기준일 현재 주주명부(실질주주명부 포함)에 등재되어 있는 주주 중 &nbsp; &nbsp; &nbsp; &nbsp;
+                            &nbsp; &nbsp;소규모합병에 반대하는 주주는 소규모합병 반대의사 표시 통지서를 기재하여 &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
+                            &nbsp;제출<br />
+                            &nbsp; &nbsp; &nbsp;다. 제출기간: 2022년 6월 13일부터 2022년 6월 27일까지 <br />
+                            &nbsp; &nbsp; &nbsp;라. 행사방법 및 장소<br />
+                            &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;(1) 명부주주(실질주주 포함): 주식회사 갤럭시코퍼레이션 경영지원본부로 제&nbsp; &nbsp;
+                            &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;출(02-6137-9420)<br />
+                            &nbsp; &nbsp; &nbsp;마. 주식매수청구권: 상법 제 527 조의 3 규정에 의하여 주식매수청구권은 인정되&nbsp; &nbsp; &nbsp; &nbsp;
+                            &nbsp; &nbsp; &nbsp;지 않음<br />
+                        </div>
+                        <div class="popup_text">
+                            8. 채권자 이의절차(상법 527 조의 5) <br />
+                            &nbsp; &nbsp; &nbsp;이 합병에 이의가 있는 채권자는 채권자 이의제출 공고일(2022년 6월 30일 예정) <br />
+                            &nbsp; &nbsp; &nbsp;게재일 익일로부터 1 개월 이내에 관계회사에 이의를 제출하기 바람.<br />
+                        </div>
+                        <div class="popup_text">
+                            9. 기타 <br />
+                            &nbsp; &nbsp; &nbsp;가. 본 합병은 상법 제 527 조의 3규정에 의거, 주주총회의 승인을 얻지 아니하고 &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;이사회 결의로서 갈음함 <br />
+                            &nbsp; &nbsp; &nbsp;나. 상법 제 527 조의 3 제 4 항에 의거 발행주식총수의 100 분의 20 이상에 해당하 &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;는 주식소유 주주가 본건 합병에 반대의사를 통지한 때에는 주주총회의 승인을 &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;이사회의 승인으로
+                            갈음하는 소규모 합병을 할 수 없음<br />
+                        </div>
+                        <div class="popup_text_no_margin">
+                            [별첨]
+                        </div>
+                        <div class="popup_text" style="text-align: center;">
+                            이사회 결의 반대의사표시 통지서
+                        </div>
+                        <div class="popup_text">
+                            주식회사 갤럭시코퍼레이션 대표이사 귀하
+                        </div>
+                        <div class="popup_text">
+                            본인은 주식회사 갤럭시코퍼레이션과 다음 회사간의 합병계약에 대한 이사회결의에 반대함을 통지합니다.
+                        </div>
+                        <div class="popup_text">
+                            <table style="width: 100%;">
+                                <tbody>
+                                    <tr>
+                                        <td rowspan="2">피합병회사<br/>(해당회사에 v)</td>
+                                        <td colspan="4" style="text-align: left;">주식회사 주피터엔터테인먼트&nbsp; &nbsp; &nbsp;□</td>
+                                    </tr>
+                                    <tr>
+                                        <td colspan="4" style="text-align: left;">주식회사 페르소나유니버스&nbsp; &nbsp; &nbsp; &nbsp; &nbsp;□</td>
+                                    </tr>
+                                    <tr>
+                                        <td style="text-align: left;">주주번호</td>
+                                        <td>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;</td>
+                                        <td style="text-align: left;">주주명</td>
+                                        <td>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;</td>
+                                    </tr>
+                                    <tr>
+                                        <td style="text-align: left;">소유주식의 종류</td>
+                                        <td>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;</td>
+                                        <td style="text-align: left;">소유주식 수</td>
+                                        <td>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;</td>
+                                    </tr>
+                                </tbody>
+                            </table>
+                        </div>
+                        <div class="popup_text">
+                            2022 년 __월 __일
+                        </div>
+                        <div class="popup_text" style="text-align: right;">
+                            성명 :&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; (인)
+                        </div>
+                        <div class="popup_text">
+                            주소 : <br/>
+                            주민(사업자) 등록번호 : <br />
+                            전화번호 : <br />
+                        </div>
+                    </div>
+                    <div class="extra-space-m"></div>
+                    <div style="text-align: center; font-size: 16px; cursor: pointer;">
+                        <a href="assets/files/notice.pdf" download style="padding: 5px; color: white; background-color: black; text-decoration: none;">다운로드</a>
+                    </div>  
+                </div>
+            </div>
+        </div>
+        
+        <div class="mobile">
+            <div class="popup" #popup>
+                <a (click)="closePopup();" style="cursor: pointer;" type="button" class="ly_vote_close"><span class="blind">팝업닫기</span></a>
+                <div class="extra-space-m"></div>
+                <div class="popup_box">
+                    <h3>소규모 합병 공고</h3>
+                    <div class="extra-space-m"></div>
+                    <div class="popup_box_inner">
+                        <div class="popup_text">
+                            주식회사 갤럭시코퍼레이션은 주식회사 주피터엔터테인먼트 및 주식회사 페르소나유니 버스와 2022년 6월 10일 각각 합병계약을 체결하고,상법 제527조의3규정에 의하여 그
+                            내용을 아래와 같이 공고합니다.
+                        </div>
+                        <div class="popup_text" style="text-align: center;">
+                            - 아 래 -
+                        </div>
+                        <div class="popup_text">
+                            1. 합병 당사회사 <br />
+                            가. 존속법인 : 주식회사 갤럭시코퍼레이션 <br />
+                            나. 소멸법인 : 주식회사 주피터엔터테인먼트 <br />
+                            다. 소멸법인 : 주식회사 페르소나유니버스 <br />
+                        </div>
+                        <div class="popup_text">
+                            2. 합병방법 : 주식회사 갤럭시코퍼레이션이 주식회사 주피터엔터테인먼트 및 페르소나유니버스를 각각 흡수합병함
+                        </div>
+                        <div class="popup_text">
+                            3. 합병비율: <br />
+                            「주식회사 갤럭시코퍼레이션 : 주식회사 주피터엔터테인먼트 = 1 : 0」 <br />
+                            「주식회사 갤럭시코퍼레이션 : 주식회사 페르소나유니버스 = 1 : 0」 <br />
+                        </div>
+                        <div class="popup_text">
+                            4. 각 소멸회사의 현황 <br />
+                            가. 주식회사 주피터엔터테인먼트 : 서울특별시 영등포구 국제금융로 2 길 37, 2102 호 <br />
+                            나. 주식회사 페르소나유니버스 : 서울특별시 영등포구 국회대로 780, 1134 호 <br />
+                        </div>
+                        <div class="popup_text">
+                            5. 합병기일: 2022년 8월 1일
+                        </div>
+                        <div class="popup_text">
+                            6. 주식회사 갤럭시코퍼레이션과 주식회사 주피터엔터테인먼트 및 주식회사 페르소나유니버스와의 본건 합병은 상법 제 527 조의
+                            3 규정에 의한 소규모합병으로 주주총회의 승인을
+                            얻지 아니하고 이사회 결의로 합병함
+                        </div>
+    
+                        <div class="popup_text">
+                            7. 소규모합병 반대의사표시 행사(기준일 및 주주명부 폐쇄기간) <br />
+                            가. 기준일 및 폐쇄기간 <br />
+                            기준일 : 2022년 6월 13일<br />
+                            주주명부 폐쇄기간 : 2022년 6월 13일부터 2022년 6월 27일까지<br />
+                            나. 행사절차: 기준일 현재 주주명부(실질주주명부 포함)에 등재되어 있는 주주 중 소규모합병에 반대하는 주주는 소규모합병 반대의사 표시 통지서를 기재하여 제출<br />
+                            다. 제출기간: 2022년 6월 13일부터 2022년 6월 27일까지 <br />
+                            라. 행사방법 및 장소<br />
+                            (1) 명부주주(실질주주 포함): 주식회사 갤럭시코퍼레이션 경영지원본부로 제출(02-6137-9420)<br />
+                            마. 주식매수청구권: 상법 제 527 조의 3 규정에 의하여 주식매수청구권은 인정되지 않음<br />
+                        </div>
+                        <div class="popup_text">
+                            8. 채권자 이의절차(상법 527 조의 5) <br />
+                            이 합병에 이의가 있는 채권자는 채권자 이의제출 공고일(2022년 6월 30일 예정) <br />
+                            게재일 익일로부터 1 개월 이내에 관계회사에 이의를 제출하기 바람.<br />
+                        </div>
+                        <div class="popup_text">
+                            9. 기타 <br />
+                            가. 본 합병은 상법 제 527 조의 3규정에 의거, 주주총회의 승인을 얻지 아니하고 이사회 결의로서 갈음함 <br />
+                            나. 상법 제 527 조의 3 제 4 항에 의거 발행주식총수의 100 분의 20 이상에 해당하는 주식소유 주주가 본건 합병에 반대의사를 통지한 때에는 주주총회의 승인을 &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;이사회의 승인으로
+                            갈음하는 소규모 합병을 할 수 없음<br />
+                        </div>
+                        <div class="popup_text_no_margin">
+                            [별첨]
+                        </div>
+                        <div class="popup_text" style="text-align: center;">
+                            이사회 결의 반대의사표시 통지서
+                        </div>
+                        <div class="popup_text">
+                            주식회사 갤럭시코퍼레이션 대표이사 귀하
+                        </div>
+                        <div class="popup_text">
+                            본인은 주식회사 갤럭시코퍼레이션과 다음 회사간의 합병계약에 대한 이사회결의에 반대함을 통지합니다.
+                        </div>
+                        <div class="popup_text">
+                            <table style="width: 100%;">
+                                <tbody>
+                                    <tr>
+                                        <td rowspan="2">피합병회사<br/>(해당회사에 v)</td>
+                                        <td colspan="4" style="text-align: left;">주식회사 주피터엔터테인먼트&nbsp; &nbsp; &nbsp;□</td>
+                                    </tr>
+                                    <tr>
+                                        <td colspan="4" style="text-align: left;">주식회사 페르소나유니버스&nbsp; &nbsp; &nbsp; &nbsp; &nbsp;□</td>
+                                    </tr>
+                                    <tr>
+                                        <td style="text-align: left;">주주번호</td>
+                                        <td>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;</td>
+                                        <td style="text-align: left;">주주명</td>
+                                        <td>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;</td>
+                                    </tr>
+                                    <tr>
+                                        <td style="text-align: left;">소유주식의 종류</td>
+                                        <td>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;</td>
+                                        <td style="text-align: left;">소유주식 수</td>
+                                        <td>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;</td>
+                                    </tr>
+                                </tbody>
+                            </table>
+                        </div>
+                        <div class="popup_text">
+                            2022 년 __월 __일
+                        </div>
+                        <div class="popup_text" style="text-align: right;">
+                            성명 :&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; (인)
+                        </div>
+                        <div class="popup_text">
+                            주소 : <br/>
+                            주민(사업자) 등록번호 : <br />
+                            전화번호 : <br />
+                        </div>
+                    </div>
+                    <div class="extra-space-m"></div>
+                    <div style="text-align: center; font-size: 16px; cursor: pointer;">
+                        <a href="assets/files/notice.pdf" download style="padding: 5px; color: white; background-color: black; text-decoration: none;">다운로드</a>
+                    </div>    
+                    <div class="extra-space-m"></div>
+                </div>
+            </div>
+        </div>
+        
         <div class="caption text-center text-white" data-stellar-ratio="0.7">
             <div id="owl-intro-text" class="owl-carousel">
                 <div class="item">
                     <h1 class="pc">
-                        <img src="assets/images/home/about/pc/main_enjoy_our_metaverse.png" width="60%"/>
+                        <img src="assets/images/home/about/pc/main_enjoy_our_metaverse.png" width="60%" />
                     </h1>
                     <h1 class="mobile">
-                        <img src="assets/images/home/about/mo/main_enjoy_our_metaverse_m.png" width="70%"/>
+                        <img src="assets/images/home/about/mo/main_enjoy_our_metaverse_m.png" width="70%" />
                     </h1>
                     <!-- <h1>ENJOY OUR METAVERS</h1> -->
-                    <a class="btn btn-blank page-scroll" href="#dna-section" style="padding: 0px;"><img src="assets/images/home/main/main_who_we_are_m.png" width="60%"/></a>
+                    <a class="btn btn-blank page-scroll" href="#dna-section" style="padding: 0px;"><img
+                            src="assets/images/home/main/main_who_we_are_m.png" width="60%" /></a>
                 </div>
                 <div class="item">
                     <h1 class="pc">
-                        <img src="assets/images/home/about/pc/main_persona_universe.png" width="60%"/>
+                        <img src="assets/images/home/about/pc/main_persona_universe.png" width="60%" />
                     </h1>
                     <h1 class="mobile">
-                        <img src="assets/images/home/about/mo/main_persona_universe_m.png" width="70%"/>
+                        <img src="assets/images/home/about/mo/main_persona_universe_m.png" width="70%" />
                     </h1>
                     <!-- <h1>PERSONA UNIVERSE</h1> -->
-                    <a class="btn btn-blank page-scroll" href="#galaxy-ip-section" style="padding: 0px;"><img src="assets/images/home/main/main_our_persona_m.png" width="70%"/></a>
+                    <a class="btn btn-blank page-scroll" href="#galaxy-ip-section" style="padding: 0px;"><img
+                            src="assets/images/home/main/main_our_persona_m.png" width="70%" /></a>
                 </div>
                 <div class="item">
                     <h1 class="pc">
-                        <img src="assets/images/home/about/pc/main_with_us_together.png" width="60%"/>
+                        <img src="assets/images/home/about/pc/main_with_us_together.png" width="60%" />
                     </h1>
                     <h1 class="mobile">
-                        <img src="assets/images/home/about/mo/main_with_us_together_m.png" width="70%"/>
+                        <img src="assets/images/home/about/mo/main_with_us_together_m.png" width="70%" />
                     </h1>
                     <!-- <h1>WITH US TO INFINITY</h1> -->
-                    <a class="btn btn-blank page-scroll" href="#business-section" style="padding: 0px;"><img src="assets/images/home/main/main_what_we_do_m.png" width="60%"/></a>
+                    <a class="btn btn-blank page-scroll" href="#business-section" style="padding: 0px;"><img
+                            src="assets/images/home/main/main_what_we_do_m.png" width="60%" /></a>
                 </div>
             </div>
         </div>
