--- a/src/app/pages/pc/home/about/galaxy-about.component.html
+++ b/src/app/pages/pc/home/about/galaxy-about.component.html
@@ -131,11 +131,13 @@
                                 전화번호 : <br />
                             </div>
                         </div>
-                        <div class="extra-space-m"></div>
+
+                        <!-- <div class="extra-space-m"></div>
                         <div style="text-align: center; font-size: 16px; cursor: pointer;">
                             <a href="assets/files/notice.pdf" download
                                 style="padding: 5px; color: white; background-color: black; text-decoration: none;">다운로드</a>
-                        </div>
+                        </div> -->
+
                     </div>
                 </div>
             </div>
@@ -144,6 +146,8 @@
                 <div class="popup" #popup>
                     <a (click)="closePopup();" style="cursor: pointer;" type="button" class="ly_vote_close"><span class="blind">팝업닫기</span></a>
                     <div class="extra-space-m"></div>
+
+
                     <div class="popup_box">
                         <h3>소규모 합병 공고</h3>
                         <div class="extra-space-m"></div>
@@ -260,12 +264,17 @@
                                 전화번호 : <br />
                             </div>
                         </div>
-                        <div class="extra-space-m"></div>
+
+
+                        <!-- <div class="extra-space-m"></div>
                         <div style="text-align: center; font-size: 16px; cursor: pointer;">
                             <a href="assets/files/notice.pdf" download style="padding: 6px; font-size: 14px; color: white; background-color: black; text-decoration: none;">다운로드</a>
-                        </div>
-                        <div class="extra-space-m"></div>
+                        </div> -->
+                        
                     </div>
+
+
+                        <div class="extra-space-m"></div>
                 </div>
             </div>
         </div>
