--- a/src/app/pages/pc/home/contact/galaxy-contact.component.html
+++ b/src/app/pages/pc/home/contact/galaxy-contact.component.html
@@ -20,7 +20,7 @@
                             <li><i class="fa fa-building"></i> 회사명 : (주)갤럭시코퍼레이션</li>
                             <li><i class="fa fa-user"></i> 대표자 : 최용호</li>
                             <li><i class="fa fa-file"></i> 사업자등록번호 : 781-86-01607</li>
-                            <li><i class="fa fa-map-marker fa-lg"></i> 서울 영등포구 국제금융로 10 Two IFC 12F,<br><br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 10, Gukjegeumyung-ro, Yeongdeungpo-gu,<br><br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Seoul, Republic of Korea</li>
+                            <li><i class="fa fa-map-marker fa-lg"></i> 서울 영등포구 국제금융로 10 Two IFC 12F / Three IFC 36F, 53F,<br><br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 10, Gukjegeumyung-ro, Yeongdeungpo-gu,<br><br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Seoul, Republic of Korea</li>
                             <li><i class="fa fa-envelope"></i>jin@galaxyuniverse.ai</li>
                         </ul>
                     </div>
